--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+
+    <meta property="og:title" content="Kamil's Portfolio Website" />
+    <meta name="description" content="My Portfolio site created using React.js"/>
+    <!-- <meta name="image" property="og:image" content="%PUBLIC_URL%/white_house_OG.jpeg" /> -->
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/OGIMG_HEADSHOT.jpeg" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <meta name="author" content="Kamil Peza" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>Kamil's Portfolio Website</title>
